--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 			<div class="row align-items-center full-height no-gutters">
 				<div class="col-sm-1 col-md-2 col-lg-2"></div>
 				<div class="col-sm-10 col-md-8 col-lg-8">
-					<h1>Daniel Berryman</h1>
+					<h1>Daniel Jospeh Berryman</h1>
 					<p>Hello, I'm a front-end developer living in New York City. I want to help care for the world through quality web development.</p>
 					<a href="mailto:danielberrymanwebdev@gmail.com" target="_blank">email me</a>
 				</div>
