--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 					<h1>Daniel Jospeh Berryman</h1>
 					<p>Hello, I'm a front-end developer living in New York City. I want to help care for the world through quality web development.</p>
 					<a href="mailto:danielberrymanwebdev@gmail.com" target="_blank">email me</a>
+					<a href="mailto:danielberrymanwebdev@gmail.com" target="_blank">email me</a>
 				</div>
 				<div class="col-sm-1 col-md-2 col-lg-2"></div>
 			</div>
