I added a paragraph for demo purpose

--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
 					<p>Hello, I'm a front-end developer living in New York City. I want to help care for the world through quality web development.</p>
 					<a href="mailto:danielberrymanwebdev@gmail.com" target="_blank">email me</a>
 					<a href="mailto:danielberrymanwebdev@gmail.com" target="_blank">email me</a>
+					<p>I'm adding a small change for demo</p>
 				</div>
 				<div class="col-sm-1 col-md-2 col-lg-2"></div>
 			</div>
